# raylib-2d-game-experiments

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
assets/levels/: level0.json
docs/: references.md
src/: main.cpp
src/audio/: SoundCache.cpp  SoundCache.hpp
src/core/: App.cpp  App.hpp  Game.cpp  Game.hpp  GameState.hpp  Time.hpp  Types.hpp
src/debug/: DebugLayer.cpp  DebugUI.cpp  DebugUI.hpp  SpriteEditor.cpp  SpriteEditor.hpp
src/gfx/: AnimationBank.cpp  AnimationBank.hpp  AnimationDef.hpp  SpriteSheet.hpp  TextureCache.cpp  TextureCache.hpp
src/scene/: Combat.cpp  Combat.hpp  LevelLoad.cpp  LevelLoad.hpp  Scene.cpp  Scene.hpp  Spawn.cpp  Spawn.hpp
src/systems/: AI.cpp  AI.hpp  Animator.cpp  Animator.hpp  Collision.cpp  Collision.hpp  Input.cpp  Input.hpp  Juice.cpp  Juice.hpp  Lifetime.cpp  Lifetime.hpp  Movement.cpp  Movement.hpp  Render.cpp  Render.hpp
src/world/: Components.hpp  World.cpp  World.hpp
